--- a/app/globals.css
+++ b/app/globals.css
@@ -1,29 +1,30 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+@layer utilities {
+  .btn-purple {
+    @apply border-custom-purple bg-custom-purple text-white
+  }
+  .btn-white {
+    @apply border-none bg-none text-black
+  }
+  .btn-normal {
+    @apply border-r-slate-300 bg-white text-black shadow-sm font-medium
+  }
+  .btn-normal-gray {
+    @apply border-r-slate-300 bg-white text-gray-700 shadow-sm font-semibold
+  }
+  .btn-normal-dark {
+    @apply border-[#333741] bg-[#161B26] text-[#CECFD2] shadow-sm font-semibold
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+
+body { 
+  font-family: Inter;
 }
 
 @layer utilities {
